Match the preview highlight roundedness with the video

https://bugzilla.gnome.org/show_bug.cgi?id=671720